
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int new_target; int target; } ;
typedef TYPE_1__ req1_t ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int xdr_string (int *,int *,int ) ;

bool_t xdr_req1(XDR *xdrs,req1_t *obj){
    if(!xdr_string(xdrs,&obj->target,~0)) return(FALSE);
    if(!xdr_string(xdrs,&obj->new_target,~0)) return(FALSE);
}
